@@ -137,6 +137,7 @@ Chronological list of authors
   - Shubham Sharma
   - Yuxuan Zhuang
   - Abhishek Shandilya
+  - Morgan L. Nance
 
 External code
 -------------
