@@ -16,11 +16,13 @@ The rules for this file:
 mm/dd/yy richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
          PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
          Yuan-Yu, xiki-tempula, HTian1997, Iv-Hristov, hmacdope, AnshulAngaria,
-         ss62171, Luthaf, yuxuanzhuang, abhishandy
+         ss62171, Luthaf, yuxuanzhuang, abhishandy, mlnance
 
   * 0.21.0
 
 Fixes
+  * XDR offsets now read from trajectory if offsets file read-in fails on
+    IOError (Issue #1893, PR #2611)
   * Fixed the deprecation warning from `collections` library in `flatten_dict`
     (Issue #2605)
   * Fixed test for the `save_paths` and `load` methods of :class:`PSAnalysis`
